REGRESSION(r237845): [cairo] Hyperlink underscore layout issue https://bugs.webkit.org/show_bug.cgi?id=191630

Reviewed by Michael Catanzaro.

Only flip Y in GlyphToPathTranslator for ports using CG.

* platform/graphics/FontCascade.cpp:
(WebCore::GlyphToPathTranslator::GlyphToPathTranslator):

Canonical link: https://commits.webkit.org/206588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238413 268f45cc-cd09-0410-ab3c-d52691b4dbfc